--- a/public/index.html
+++ b/public/index.html
@@ -13,20 +13,19 @@
 </head>
 
 <body>
-    <h1 style="text-align: center">IPL Dataset visualization</h1>
+    <h1>IPL Dataset visualization</h1>
     <form id='query'>
         <label>Enter Year: <input type="number" min="2008" max="2019" name="year"></label>
         <input type="submit">
     </form>
-    <div id="custom-economy-bowlers" class="container"></div>
-    <!-- <div id="matches-played-per-year" class="container"></div>
-    <div id="matches-won-by-each-team" class="container"></div>
-    <div id="extra-runs" class="container"></div> -->
     <div id="economy-bowlers" class="container"></div>
-    <!-- <div id="stadiums" class="container"></div> -->
+    <div id="matches-story" class="container"></div>
+
+    <center><h5>Developed By VISHAL</h5></center>
+
 
     <script src="https://code.highcharts.com/highcharts.js"></script>
 
     <script src="./app.js"></script>
-    <footer style="text-align: center">Coded by <a href="https://www.linkedin.com/in/rishavbharti/">Rishav Bharti</a></footer>
+
 </body>
