--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,19 @@
 
 <body>
     <h1>IPL Dataset visualization</h1>
+    
+    <div id="matches-played-per-year" class="container"></div>
+
+    <div id="matches-won-by-each-team" class="container"></div>
+
+    <div id="extra-runs-conceded-by-each-2016" class="container"></div>
+
     <form id='query'>
         <label>Enter Year: <input type="number" min="2008" max="2019" name="year"></label>
         <input type="submit">
     </form>
     <div id="economy-bowlers" class="container"></div>
+
     <div id="matches-story" class="container"></div>
 
     <center><h5>Developed By VISHAL</h5></center>
