--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 
     <form id='query'>
         <label>Enter Year: <input type="number" min="2008" max="2019" name="year"></label>
-        <input type="submit">
+        <input type="submit" value="search">
     </form>
     <div id="economy-bowlers" class="container"></div>
 
